--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Homework/Week-2/assembly-exercises/lib/forge-std"]
 	path = Homework/Week-2/assembly-exercises/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "Homework/Week-2/gas-optimization-game/lib/forge-std"]
+	path = Homework/Week-2/gas-optimization-game/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
